Fixed spacing and padding issues - FINAL

--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
   margin-left: 3%;
   margin-top: 3%;
   margin-right: 7%;
-  column-gap: space-around;
+  row-gap: 50px;
 }
 
 .card {
@@ -28,25 +28,24 @@
   -webkit-backdrop-filter: blur(2.5px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
-  padding: 30px;
 }
 
 #red {
   flex-basis: 33%;
   border: 1px black;
-  margin-bottom: 4rem;
+  margin-bottom: 2px;
 }
 
 #black {
   flex-basis: 33%;
   border: 1px black;
-  margin-bottom: 4rem;
+  margin-bottom: 2px;
 }
 
 #blue {
   flex-basis: 33%;
   border: 1px black;
-  margin-bottom: 4rem;
+  margin-bottom: 2px;
 }
 
 #orange {
@@ -57,23 +56,24 @@
 h2 {
   border: 1px solid lightblue;
   width: 100%;
+  height: 15%;
   font-weight: bolder;
   font-size: medium;
   text-align: center;
+  justify-content: center;
+  align-content: center;
+  padding-top: 15px;
+}
+
+h4 {
+  margin-bottom: 0px;
 }
 
 .stock {
   background-color: grey;
   color: yellow;
   text-align: left;
-  border-radius: 0%;
-  margin-left: 0%;
-  mar
 }
-
-/* .info {
-  line-height: 1.0;
-} */
 
 .specs {
   font-size: large;
@@ -81,6 +81,7 @@ h2 {
   font-weight: bold;
   margin-left: 3%;
   line-height: 1.0;
+  padding: 0%;
 }
 
 .size {
@@ -88,6 +89,7 @@ h2 {
   font-weight: bolder;
   margin-left: 3%;
   line-height: 1.0;
+  margin-bottom: 0px;
 }
 
 footer {
